--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.1.4",
     "@angular/compiler": "~7.1.4",
     "@angular/core": "~7.1.4",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.1.4",
     "@angular/http": "~7.1.4",
     "@angular/material": "^7.1.0",
@@ -24,6 +25,7 @@
     "@angular/router": "~7.1.4",
     "angular2-text-mask": "^9.0.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.7.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "ngx-currency": "^1.5.1",
